# 3d-telemetry

./: CMakeLists.txt  main.cpp
include/: extended_kalman_filter.h  feature_extractor_factory.h  feature_type.h  ifeature_extractor.h  imotion_model.h  isensor_model.h  istate.h  rgbd_sensor_model.h  slam.h  velocity_2d_motion_model.h
src/: CMakeLists.txt  slam.cpp
src/feature_extraction/: feature_extractor_factory.cpp  open_cv_feature_extractor.cpp  open_cv_feature_extractor.h  sift_feature_extractor.cpp  sift_feature_extractor.h  surf_feature_extractor.cpp  surf_feature_extractor.h
test/: CMakeLists.txt  ekf_tests.cpp  ekf_tests.h
test/mock/: sensor_mock.h
